stop words jumping

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -156,7 +156,7 @@ button:disabled {
 .shape {
   display: grid;
   grid-template-columns: repeat(4, var(--shape-box-diam));
-  grid-template-rows: repeat(4, var(--shape-box-diam)) 1fr;
+  grid-template-rows: repeat(5, var(--shape-box-diam));
   grid-template-areas:
     "shape0 shape1 shape2 shape3"
     "shape4 shape5 shape6 shape7"
